--- a/MyKeyboard.xcodeproj/xcshareddata/xcschemes/AKboard.xcscheme
+++ b/MyKeyboard.xcodeproj/xcshareddata/xcschemes/AKboard.xcscheme
@@ -2,7 +2,7 @@
 <Scheme
    LastUpgradeVersion = "1010"
    wasCreatedForAppExtension = "YES"
-   version = "2.0">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -65,14 +65,9 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "2">
-      <RemoteRunnable
-         runnableDebuggingMode = "1"
-         BundleIdentifier = "dev.tunks.MyKeyboard"
-         RemotePath = "/Users/ebrimatunkara/Library/Developer/CoreSimulator/Devices/E90C29CC-5F7C-41AA-92D1-E3614791888A/data/Containers/Bundle/Application/7E17AEB8-1217-4504-9720-8D6A186B0B4A/MyKeyboard.app">
-      </RemoteRunnable>
-      <MacroExpansion>
+      allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "040D948021B0CABC00897C71"
@@ -80,9 +75,20 @@
             BlueprintName = "MyKeyboard"
             ReferencedContainer = "container:MyKeyboard.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
